--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -2,5 +2,7 @@ $size-unit: 8px;
 $color-background: #161b22;
 $color-light: whitesmoke;
 $color-shadow: #1f6feb;
-$color-button: #1f71eb34;
+$color-button: #1f71eb93;
+$color-button-2: #4feb1f93;
+$color-button-3: #eb1f1f93;
 $width: 50%;
