--- a/style.css
+++ b/style.css
@@ -4,12 +4,14 @@
             transform: translate(-33%, 0);
   }
   50% {
-    text-shadow: 0 2px 20px #1f6feb;
+    text-shadow: 2px 2px 40px whitesmoke;
+    opacity: 0%;
   }
   100% {
     -webkit-transform: translate(0%, 0);
             transform: translate(0%, 0);
-    text-shadow: 0 2px 20px white;
+    opacity: 100%;
+    color: whitesmoke;
   }
 }
 
@@ -19,12 +21,14 @@
             transform: translate(-33%, 0);
   }
   50% {
-    text-shadow: 0 2px 20px #1f6feb;
+    text-shadow: 2px 2px 40px whitesmoke;
+    opacity: 0%;
   }
   100% {
     -webkit-transform: translate(0%, 0);
             transform: translate(0%, 0);
-    text-shadow: 0 2px 20px white;
+    opacity: 100%;
+    color: whitesmoke;
   }
 }
 
@@ -156,15 +160,22 @@ h1 {
 
 .button1 {
   position: relative;
-  font-size: 32px;
-  color: whitesmoke;
   list-style-type: none;
   background: #161b22;
   cursor: pointer;
+  -webkit-transition: background-color 0.4s ease-in-out,-webkit-box-shadow 0.4s ease-in-out;
+  transition: background-color 0.4s ease-in-out,-webkit-box-shadow 0.4s ease-in-out;
+  transition: background-color 0.4s ease-in-out,box-shadow 0.4s ease-in-out;
+  transition: background-color 0.4s ease-in-out,box-shadow 0.4s ease-in-out,-webkit-box-shadow 0.4s ease-in-out;
+  height: 64px;
 }
 
 .languages__text {
   display: block;
+  font-size: 32px;
+  color: whitesmoke;
+  -webkit-transition: font-size 0.4s ease-out;
+  transition: font-size 0.4s ease-out;
 }
 
 .button1::before, .button1::after {
@@ -226,7 +237,24 @@ h1 {
 .button1:hover {
   -webkit-transition-delay: 0.4s;
           transition-delay: 0.4s;
-  background-color: #1f71eb34;
+  -webkit-box-shadow: 0px 0px 15px whitesmoke;
+          box-shadow: 0px 0px 15px whitesmoke;
+}
+
+.button1:hover:nth-child(1) {
+  background-color: #1f71eb93;
+}
+
+.button1:hover:nth-child(2) {
+  background-color: #4feb1f93;
+}
+
+.button1:hover:nth-child(3) {
+  background-color: #eb1f1f93;
+}
+
+.button1:hover .languages__text {
+  font-size: 36px;
 }
 
 .button1:after {
